fix z-index

--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,5 +1,9 @@
-.root {
+.wrapper {
     min-width: rem(384px);
+}
+
+.dropdown {
+    z-index: 30000 !important;
 }
 
 .poster {
